tests/golden/kubernetes_1.23/prometheus/prometheus/60_default-instance_blackboxExporter_networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    source: https://github.com/projectsyn/component-prometheus
  labels:
    app.kubernetes.io/component: exporter
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: blackbox-exporter
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 0.21.0
  name: blackbox-exporter
  namespace: syn-prometheus
spec:
  egress:
    - {}
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 9115
          protocol: TCP
        - port: 19115
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/component: exporter
      app.kubernetes.io/name: blackbox-exporter
      app.kubernetes.io/part-of: kube-prometheus
  policyTypes:
    - Egress
    - Ingress
